k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  selector:
    app: server
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
