k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app.kubernetes.io/name: web
  ports:
  - port: 80
    targetPort: 4173
